[package]
name = "passgen-lib"
version = "1.1.4"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Library for generating cryptographically secure passwords/tokens and other sets and sequences."
readme = "README.md"
authors = ["Mamontov Konstantin <k@mamont.xyz>"]
homepage = "https://github.com/mammothcoding/passgen-lib"
repository = "https://github.com/mammothcoding/passgen-lib"
keywords = ["generator", "password", "token", "crypto-resistant", "library"]
categories = ["authentication", "cryptography"]
exclude = [".*"]

[lib]
name = "passgenlib"
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
rand_seeder = "0.3.0"
rand_isaac = "0.3.0"
rand_hc = "0.3.2"